--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -1,6 +1,19 @@
 .navbar {
-    color: white;
+    @apply flex text-white max-w-4xl m-auto mt-3
 }
-.icon {
-    color: white;
+
+.nav-logo {
+    @apply mx-4 text-2xl basis-1/3 items-center
+}
+.logo-brand {
+    @apply mr-1
+}
+.nav-search {
+    @apply w-8/12
+}
+.search-input {
+    @apply w-2/3 h-9 bg-zinc-800 pl-3 py-2 border-2 border-gray-300 rounded-md mr-1 outline-none text-xl
+}
+.search-button {
+    @apply  border-2 border-gray-300 h-9 w-9 align-top
 }
