--- a/src/components/video/video.css
+++ b/src/components/video/video.css
@@ -1,8 +1,8 @@
 .video {
     @apply text-white
 }
-.video-item {
-    @apply h-1/4
+.video-img {
+    @apply h-1/4 w-full m-0
 }
 .video-title {
   @apply text-base
@@ -15,7 +15,7 @@
     .video {
         @apply text-center
     }
-    .video-item {
+    .video-img {
         @apply w-10/12 m-auto h-72
     }
     .video-title {
