본문작업2(DI 작업2)_self

--- a/src/components/video/video.css
+++ b/src/components/video/video.css
@@ -2,7 +2,7 @@
     @apply text-white
 }
 .video-img {
-    @apply h-1/4 w-full m-0
+    @apply h-40 w-full m-0
 }
 .video-title {
   @apply text-base
