--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -1,23 +1,33 @@
 .navbar {
-    @apply flex justify-between text-white max-w-7xl m-auto mt-3
+    @apply flex justify-between items-center ;
+    @apply w-full p-4 border-b border-zinc-600 mt-3
 }
 
 .nav-logo {
-    @apply flex justify-center text-2xl items-center cursor-pointer
+    @apply flex justify-center  items-center;
+    @apply text-2xl cursor-pointer;
 }
+
 .logo-brand {
-    color: #ff0000;
-    @apply text-5xl ml-2 mr-3
+    @apply text-5xl ml-2 text-brand
 }
+.logo-name {
+    @apply font-bold ml-3 text-3xl
+}
+
 .nav-search {
-    @apply w-8/12
+    @apply w-full flex justify-center
 }
+
 .search-input {
-    @apply w-2/3 h-9 bg-zinc-800 pl-3 py-2 border-2 border-gray-300 rounded-md mr-1 outline-none text-xl
+    @apply w-7/12 h-9 pl-3 py-2 outline-none;
+    @apply bg-zinc-800 border-2 border-gray-300 rounded-md mr-1 outline-none text-xl
 }
+
 .search-button {
-    @apply  border-2 border-gray-300 h-9 w-9 align-top
+    @apply border-2 border-gray-300 h-9 w-9 align-top
 }
+
 .search-logo {
     @apply m-auto
 }
