--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,13 @@
 }
 body {
     margin: 0;
-    @apply bg-zinc-800 font-sans
+    width: 100vh;
+    height: 100vh;
 
-
+    @apply font-sans text-white;
+    @apply flex flex-col  items-center m-auto;
+    @apply bg-zinc-800;
+}
+#root {
+    @apply w-full max-w-screen-2xl;
 }
