--- a/src/page/Videos/videos.css
+++ b/src/page/Videos/videos.css
@@ -1,9 +1,5 @@
 .videos-list {
-    @apply m-auto mt-6 flex flex-wrap justify-center max-w-7xl
-}
-
-@media (max-width: 724px) {
-    .videos-list {
-        @apply flex-col items-center max-w-lg
-    }
+    @apply grid ;
+    @apply grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-5;
+    @apply gap-2 gap-y-4;
 }
